--- a/index.html
+++ b/index.html
@@ -103,17 +103,17 @@
                         </a>
                         <a href="https://github.com/arf-themascoteers/c2f">
                             <h3>
-                                Single Layer Network (for Medium article demo)
+                                Single Layer Network
                             </h3>
                         </a>
                         <a href="https://github.com/arf-themascoteers/snnn">
                             <h3>
-                                Single Neuron Network (for Medium article demo)
+                                Single Neuron Network
                             </h3>
                         </a>
                         <a href="https://github.com/arf-themascoteers/grad-desc">
                             <h3>
-                                Polynomial regression (for Medium article demo)
+                                Polynomial regression
                             </h3>
                         </a>
                 </div>
