--- a/index.html
+++ b/index.html
@@ -204,6 +204,9 @@
 
                 <ul class="pager">
                     <li class="next">
+                        <a href="https://noobest.medium.com">All Articles &rarr;</a>
+                    </li>
+                    <li class="next">
                         <a href="https://github.com/arf-themascoteers?tab=repositories">All Codes &rarr;</a>
                     </li>
                 </ul>
