--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     </a>
                     <a href="https://noobest.medium.com/just-another-neural-network-from-scratch-on-python-simpler-cleaner-1083e3ce3b41">
                         <h3>
-                            Neural Network from scratch on Python with mathematical proofs and code explanation
+                            Just another Neural Network from scratch with mathematical intuition
                         </h3>
                     </a>
                     <a href="https://noobest.medium.com/gradient-descent-from-scratch-almost-2594806b8d64">
