--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <hr>
                         <a href="https://github.com/arf-themascoteers/pt-mnist">
                             <h3>
-                                Handwritten digit recognizer
+                                Handwritten digit recogniser
                             </h3>
                         </a>
                         <hr>
