--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <hr>
                     <a href="https://noobest.medium.com/single-neuron-neural-network-on-python-with-mathematical-proof-ed6d6ea18be">
                         <h3>
-                            Single Neuron Neural Network on Python — with mathematical proof
+                            Single Neuron Neural Network on Python — with mathematical intuition
                         </h3>
                     </a>
                     <hr>
