--- a/index.html
+++ b/index.html
@@ -126,9 +126,15 @@
                             </h3>
                         </a>
                         <hr>
+                        <a href="https://github.com/arf-themascoteers/escape">
+                            <h3>
+                                Escape game with PyGame
+                            </h3>
+                        </a>
+                        <hr>
                         <a href="https://github.com/arf-themascoteers/gol-pygame">
                             <h3>
-                                Conway's Game of Life
+                                Conway's Game of Life with PyGame
                             </h3>
                         </a>
                         <hr>
