--- a/index.html
+++ b/index.html
@@ -201,6 +201,12 @@
                         </h3>
                     </a>
                     <hr>
+                     <a href="https://noobest.medium.com/an-intuitive-explanation-of-how-meaningless-filters-in-cnn-takes-meaningful-shapes-9a284d911f27">
+                        <h3>
+                            An intuitive explanation of how meaningless filters in CNN takes meaningful shapes
+                        </h3>
+                    </a>
+                    <hr>
                     <a href="https://noobest.medium.com/speech-recognition-with-pytorch-for-beginners-2e0af4e0a233">
                         <h3>
                             Speech Recognition with PyTorch for beginners
