--- a/index.html
+++ b/index.html
@@ -207,6 +207,12 @@
                         </h3>
                     </a>
                     <hr>
+                    <a href="https://noobest.medium.com/translational-invariance-and-translational-equivariance-in-cnn-25fb0f4f61e3">
+                        <h3>
+                            Translational Invariance and Translational Equivariance in CNN
+                        </h3>
+                    </a>
+                    <hr>
                     <a href="https://noobest.medium.com/speech-recognition-with-pytorch-for-beginners-2e0af4e0a233">
                         <h3>
                             Speech Recognition with PyTorch for beginners
