--- a/index.html
+++ b/index.html
@@ -149,21 +149,15 @@
                             </h3>
                         </a>
                         <hr>
-                        <a href="https://github.com/arf-themascoteers/ae-mnist">
-                            <h3>
-                                Autoencoder (FC)
-                            </h3>
-                        </a>
-                        <hr>
                         <a href="https://github.com/arf-themascoteers/ae-mnist-cnn">
                             <h3>
-                                Autoencoder (CNN)
+                                Autoencoder
                             </h3>
                         </a>
                         <hr>
-                        <a href="https://github.com/arf-themascoteers/ae-mnist-mixed">
+                        <a href="https://github.com/arf-themascoteers/vae-mnist">
                             <h3>
-                                Autoencoder (CNN-FC)
+                                Variational Autoencoder (CNN-FC)
                             </h3>
                         </a>
                         <hr>
