--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <hr>
                         <a href="https://github.com/arf-themascoteers/vae-mnist">
                             <h3>
-                                Variational Autoencoder (CNN-FC)
+                                Variational Autoencoder
                             </h3>
                         </a>
                         <hr>
