--- a/index.html
+++ b/index.html
@@ -149,6 +149,12 @@
                             </h3>
                         </a>
                         <hr>
+                        <a href="https://github.com/arf-themascoteers/ckd">
+                            <h3>
+                                Chronic Kidney Disease detection
+                            </h3>
+                        </a>
+                        <hr>
                         <a href="https://github.com/arf-themascoteers/ae-mnist-cnn">
                             <h3>
                                 Autoencoder
