--- a/index.html
+++ b/index.html
@@ -208,14 +208,14 @@
                     </a>
                     <hr>
 
-                    <a href="https://noobest.medium.com/normal-distribution-an-intuitive-introduction-without-math-2e124fb37eb">
+                    <a href="https://www.webalive.com.au/normal-distribution-intuitive-introduction">
                         <h3>
                             Normal Distribution — an intuitive introduction without math
                         </h3>
                     </a>
                     <hr>
 
-                    <a href="https://noobest.medium.com/single-neuron-neural-network-on-python-with-mathematical-proof-ed6d6ea18be">
+                    <a href="https://www.webalive.com.au/single-neuron-neural-network-on-python">
                         <h3>
                             Single Neuron Neural Network on Python — with mathematical intuition
                         </h3>
@@ -233,7 +233,7 @@
                         </h3>
                     </a>
                     <hr>
-                    <a href="https://noobest.medium.com/one-of-the-millions-of-learning-paths-to-deep-learning-for-programmers-15ef11b8d5d9">
+                    <a href="https://www.webalive.com.au/learning-paths-to-deep-learning">
                         <h3>
                             One of the millions of learning paths to deep learning for programmers
                         </h3>
