--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
                             </h3>
                         </a>
                         <hr>
+                        <a href="https://github.com/arf-themascoteers/pt-mnist-exp">
+                            <h3>
+                                A convolution machine without backpropagation
+                            </h3>
+                        </a>
+                        <hr>
                         <a href="https://github.com/arf-themascoteers/c2f">
                             <h3>
                                 Single Layer Network
