--- a/index.html
+++ b/index.html
@@ -107,18 +107,33 @@
                             Chronic Kidney Disease detection
                         </h3>
                     </a>
+                    <div>
+                        <a href="img/ckd.png">
+                            <img src="img/ckd.png" width="1000px" style="border: 2px solid #000" />
+                        </a>
+                    </div>
                     <hr>
                     <a href="https://github.com/arf-themascoteers/ae-mnist-cnn">
                         <h3>
                             Autoencoder
                         </h3>
                     </a>
+                    <div>
+                        <a href="img/ae.png">
+                            <img src="img/ae.png" width="1000px" style="border: 2px solid #000" />
+                        </a>
+                    </div>
                     <hr>
                     <a href="https://github.com/arf-themascoteers/vae-mnist">
                         <h3>
                             Variational Autoencoder
                         </h3>
                     </a>
+                    <div>
+                        <a href="img/vae.png">
+                            <img src="img/vae.png" width="1000px" style="border: 2px solid #000" />
+                        </a>
+                    </div>
                     <hr>
                     <a href="https://github.com/arf-themascoteers/speech-command-pytorch">
                         <h3>
