--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
                         </h3>
                     </a>
                     <hr>
+                    <div>
+                        <a href="img/audio.png">
+                            <img src="img/audio.png" width="1000px" style="border: 2px solid #000" />
+                        </a>
+                    </div>
                     <a href="https://github.com/arf-themascoteers/ckd">
                         <h3>
                             Chronic Kidney Disease detection
