--- a/index.html
+++ b/index.html
@@ -263,8 +263,7 @@
                         </h3>
                     </a>
                     <p>Spotting tumor cells on brain using the BraTS dataset</p>
-                    <p>Done: Processing nii files. Prerequisite knowledge - U-NET, 3D Convolution, DSE similarity etc. </p>
-                    <p>Remaining: estimated 80%</p>
+                    <p>Done so far: Processing nii files. Prerequisite knowledge - U-NET, 3D Convolution, DSE similarity etc. </p>
                     <hr>
                     <div>
                         <a href="img/brats.png">
@@ -277,12 +276,11 @@
                         </h3>
                     </a>
                     <p>Using CelebA dataset, generating faces</p>
-                    <p>Done: Initial codes and tensorboard setup for debug and diagnosis.</p>
-                    <p>Remaining: Finishing and testing</p>
+                    <p>Done so far: Initial codes and tensorboard setup for debug and diagnosis.</p>
                     <hr>
                     <div>
-                        <a href="img/brats.png">
-                            <img src="img/brats.png" width="1000px" style="border: 2px solid #000" />
+                        <a href="img/gan.png">
+                            <img src="img/gan.png" width="1000px" style="border: 2px solid #000" />
                         </a>
                     </div>
                 </div>
@@ -296,68 +294,67 @@
                         </h3>
                     </a>
                     <hr>
+                    <div>
+                        <a href="img/a1.png">
+                            <img src="img/a1.png" width="1000px" style="border: 2px solid #000" />
+                        </a>
+                    </div>
                     <a href="https://noobest.medium.com/feel-calculus-with-your-programming-sense-dddef4cdadc">
                         <h3>
                             Feel calculus with your programming sense
                         </h3>
                     </a>
                     <hr>
+                    <div>
+                        <a href="img/a2.png">
+                            <img src="img/a2.png" width="1000px" style="border: 2px solid #000" />
+                        </a>
+                    </div>
 
                     <a href="https://www.webalive.com.au/normal-distribution-intuitive-introduction">
                         <h3>
-                            Normal Distribution — an intuitive introduction without math
+                            Normal Distribution — an intuitive introduction without math (paid work)
                         </h3>
                     </a>
                     <hr>
-
+                    <div>
+                        <a href="img/normal.png">
+                            <img src="img/normal.png" width="1000px" style="border: 2px solid #000" />
+                        </a>
+                    </div>
                     <a href="https://www.webalive.com.au/single-neuron-neural-network-on-python">
                         <h3>
-                            Single Neuron Neural Network on Python — with mathematical intuition
+                            Single Neuron Neural Network on Python — with mathematical intuition (paid work)
                         </h3>
                     </a>
                     <hr>
+                    <div>
+                        <a href="img/snn2.png">
+                            <img src="img/snn2.png" width="1000px" style="border: 2px solid #000" />
+                        </a>
+                    </div>
                      <a href="https://noobest.medium.com/an-intuitive-explanation-of-how-meaningless-filters-in-cnn-takes-meaningful-shapes-9a284d911f27">
                         <h3>
                             An intuitive explanation of how meaningless filters in CNN takes meaningful shapes
                         </h3>
                     </a>
                     <hr>
-                    <a href="https://noobest.medium.com/translational-invariance-and-translational-equivariance-in-cnn-25fb0f4f61e3">
-                        <h3>
-                            Translational Invariance and Translational Equivariance in CNN
-                        </h3>
-                    </a>
-                    <hr>
+                    <div>
+                        <a href="img/cnn3.png">
+                            <img src="img/cnn3.png" width="1000px" style="border: 2px solid #000" />
+                        </a>
+                    </div>
                     <a href="https://www.webalive.com.au/learning-paths-to-deep-learning">
                         <h3>
                             One of the millions of learning paths to deep learning for programmers
                         </h3>
                     </a>
                     <hr>
-                    <a href="https://noobest.medium.com/speech-recognition-with-pytorch-for-beginners-2e0af4e0a233">
-                        <h3>
-                            Speech Recognition with PyTorch for beginners
-                        </h3>
-                    </a>
-                    <hr>
-                    <a href="https://noobest.medium.com/but-why-is-this-learning-rate-in-gradient-descent-279fd991a1ae">
-                        <h3>
-                            But why is this learning rate in gradient descent
-                        </h3>
-                    </a>
-                    <hr>
-                    <a href="https://noobest.medium.com/custom-dataset-in-pytorch-5a554a22262a">
-                        <h3>
-                            Custom dataset in PyTorch
-                        </h3>
-                    </a>
-                    <hr>
-                    <a href="https://noobest.medium.com/gradient-descent-from-scratch-almost-2594806b8d64">
-                        <h3>
-                            Gradient descent in Python from scratch
-                        </h3>
-                    </a>
-                    <hr>
+                    <div>
+                        <a href="img/millions.png">
+                            <img src="img/millions.png" width="1000px" style="border: 2px solid #000" />
+                        </a>
+                    </div>
                 </div>
                 <hr>
 
