--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
                             Speech emotion recogniser
                         </h3>
                     </a>
+                    <p>
+                        Recognises emotion based on SAVEE dataset using CNN.
+                    </p>
+                    <p>
+                        Currently, working on using transformer network to capture temporal relation for better accuracy.
+                    </p>
                     <hr>
                     <div>
                         <a href="img/audio.png">
@@ -112,6 +118,12 @@
                             Chronic Kidney Disease detection
                         </h3>
                     </a>
+                    <p>
+                        Detects CKD with 98% accuracy.
+                    </p>
+                    <p>
+                        Using partical derivative method, depicts impact of each feature in decision making process of the machine.
+                    </p>
                     <div>
                         <a href="img/ckd.png">
                             <img src="img/ckd.png" width="1000px" style="border: 2px solid #000" />
@@ -123,6 +135,9 @@
                             Autoencoder
                         </h3>
                     </a>
+                    <p>
+                        Simple Autoencoder on MNIST dataset
+                    </p>
                     <div>
                         <a href="img/ae.png">
                             <img src="img/ae.png" width="1000px" style="border: 2px solid #000" />
@@ -134,9 +149,12 @@
                             Variational Autoencoder
                         </h3>
                     </a>
+                    <p>
+                        Simple VAE on MNIST dataset. Used tensorboard to visualise continuous progress.
+                    </p>
                     <div>
-                        <a href="img/vae.png">
-                            <img src="img/vae.png" width="1000px" style="border: 2px solid #000" />
+                        <a href="img/vae2.png">
+                            <img src="img/vae2.png" width="1000px" style="border: 2px solid #000" />
                         </a>
                     </div>
                     <hr>
