--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
                             Speech command recogniser
                         </h3>
                     </a>
+                    <p>
+                        Simple FC network to recognise short speech commands (for example, forward, up, yes, no etc.).
+                    </p>
                     <hr>
                     <div>
                         <a href="img/command.png">
@@ -174,6 +177,9 @@
                         <h2>
                             Python Projects from Scratch
                         </h2>
+                        <p>
+                            CNN built from scratch to recognise speaker from mel spectrogram data.
+                        </p>
                         <a href="https://github.com/arf-themascoteers/cnn-speech">
                             <h3>
                                 CNN to recognise speaker
@@ -190,6 +196,18 @@
                                 A deterministic machine with predefined weight initialization
                             </h3>
                         </a>
+                        <p>
+                            An experimental work in search of explainable and deterministic neural networks.
+                        </p>
+                        <p>
+                            First started with creating 28X28 filters for each classes (digits in this case) by accumulating the average distribution of the pixels.
+                        </p>
+                        <p>
+                            Without any backpropagation, it works with 77% accuracy. Improving the filters with backpropagation (not randomly initialized) produces 88%+ accuracy.
+                        </p>
+                        <p>
+                            Future work in this would be applying DSC and addressing the issue of lack of translational invariance.
+                        </p>
                         <hr>
                         <div>
                             <a href="img/conv.png">
@@ -202,6 +220,7 @@
                             </h3>
                         </a>
                         <hr>
+                        <p>A simple neural network from scratch for demonstration purpose</p>
                         <div>
                             <a href="img/c2f.png">
                                 <img src="img/c2f.png" width="1000px" style="border: 2px solid #000" />
@@ -213,6 +232,7 @@
                             </h3>
                         </a>
                         <hr>
+                        <p>Aligning a popynomial function to sine curve for demonstration purpose</p>
                         <div>
                             <a href="img/grad-desc.png">
                                 <img src="img/grad-desc.png" width="1000px" style="border: 2px solid #000" />
@@ -224,6 +244,7 @@
                             </h3>
                         </a>
                         <hr>
+                        <p>Classic snake game. A foundation work to learn reinforcement learning.</p>
                         <div>
                             <a href="img/snake.png">
                                 <img src="img/snake.png" width="1000px" style="border: 2px solid #000" />
@@ -234,6 +255,7 @@
                                 Conway's Game of Life with PyGame
                             </h3>
                         </a>
+                        <p>Simulate Conway's Game of Life. Auto zoom-out when generations exceed borders.</p>
                         <hr>
                         <div>
                             <a href="img/gol.png">
@@ -250,6 +272,7 @@
                                 Rosalind Solution
                             </h3>
                         </a>
+                        <p>An attempt to learn fundamental of genome sequencing to be able to apply machine learning.</p>
                         <hr>
                     <div>
                         <a href="img/rosalind.png">
