--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                             New faces using GAN
                         </h3>
                     </a>
-                    <p>Using CelebA dataset, generating faces</p>
+                    <p>Using CelebA dataset, generating new faces.</p>
                     <p>Done so far: Initial codes and tensorboard setup for debug and diagnosis.</p>
                     <hr>
                     <div>
