--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                     </div>
                      <a href="https://noobest.medium.com/an-intuitive-explanation-of-how-meaningless-filters-in-cnn-takes-meaningful-shapes-9a284d911f27">
                         <h3>
-                            An intuitive explanation of how meaningless filters in CNN takes meaningful shapes
+                            An intuitive explanation of how meaningless filters in CNN take meaningful shapes
                         </h3>
                     </a>
                     <hr>
