--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                             <img src="img/escape.png" width="1000px" style="border: 2px solid #000" />
                         </a>
                     </div>
-                    <a href="https://github.com/arf-themascoteers/escape">
+                    <a href="https://github.com/arf-themascoteers/escape" id="brats">
                         <h3>
                             3D Image segmentation using U-Net
                         </h3>
