--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                             Without any backpropagation, it works with 77% accuracy. Improving the filters with backpropagation (not randomly initialized) produces 88%+ accuracy.
                         </p>
                         <p>
-                            Future work in this would be applying DSC and addressing the issue of lack of translational invariance.
+                            Future work in this would be applying DSE and addressing the issue of lack of translational invariance.
                         </p>
                         <hr>
                         <div>
