--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                             Without any backpropagation, it works with 77% accuracy. Improving the filters with backpropagation (not randomly initialized) produces 88%+ accuracy.
                         </p>
                         <p>
-                            Future work in this would be applying DSE and addressing the issue of lack of translational invariance.
+                            Future work in this would be applying DSC and addressing the issue of lack of translational invariance.
                         </p>
                         <hr>
                         <div>
@@ -304,7 +304,7 @@
                         </h3>
                     </a>
                     <p>Spotting tumor cells on brain using the BraTS dataset</p>
-                    <p>Done so far: Processing nii files. Prerequisite knowledge - U-NET, 3D Convolution, DSE similarity etc. </p>
+                    <p>Done so far: Processing nii files. Prerequisite knowledge - U-NET, 3D Convolution, DSC similarity etc. </p>
                     <hr>
                     <div>
                         <a href="img/brats.png">
