--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@
                     </a>
                     <hr>
                     <div>
-                        <a href="img/a2.png">
-                            <img src="img/a2.png" width="1000px" style="border: 2px solid #000" />
+                        <a href="img/cal2.png">
+                            <img src="img/cal2.png" width="1000px" style="border: 2px solid #000" />
                         </a>
                     </div>
 
