--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         Detects CKD with 98% accuracy.
                     </p>
                     <p>
-                        Using partical derivative method, depicts impact of each feature in decision making process of the machine.
+                        Using partial derivative method, depicts impact of each feature in decision making process of the machine.
                     </p>
                     <div>
                         <a href="img/ckd.png">
