--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                             </h3>
                         </a>
                         <hr>
-                        <p>Aligning a popynomial function to sine curve for demonstration purpose</p>
+                        <p>Aligning a polynomial function to sine curve for demonstration purpose</p>
                         <div>
                             <a href="img/grad-desc.png">
                                 <img src="img/grad-desc.png" width="1000px" style="border: 2px solid #000" />
