--- a/index.html
+++ b/index.html
@@ -464,6 +464,14 @@
                                 </span>
                             </a>
                         </li>
+                        <li>
+                            <a href="tel:+61406155493">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-call fa-stack-1x fa-inverse"></i>
+                                </span>
+                            </a>
+                        </li>
                     </ul>
                     <p class="copyright text-muted">Copyright &copy; Arif 2021</p>
                 </div>
