--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                             <a href="tel:+61406155493">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-call fa-stack-1x fa-inverse"></i>
+                                    <i class="fa fa-mobile-phone fa-stack-1x fa-inverse"></i>
                                 </span>
                             </a>
                         </li>
