--- a/index.html
+++ b/index.html
@@ -472,6 +472,14 @@
                                 </span>
                             </a>
                         </li>
+                        <li>
+                            <a href="https://api.whatsapp.com/send?phone=61406155493">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-whatsapp fa-stack-1x fa-inverse"></i>
+                                </span>
+                            </a>
+                        </li>
                     </ul>
                     <p class="copyright text-muted">Copyright &copy; Arif 2021</p>
                 </div>
