--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
-                        <h1>Arif's Academic Portfolio</h1>
-                        <hr class="small">
+                        <h1>Academic Portfolio</h1>
+                        <h1>of</h1>
+                        <h1>Arif</h1>
+                        <h2 class="contact">Mobile: +61406155493</h2>
                         <!--
                         <span class="subheading">Did you know GAN was invented in a bar?</span>
                         -->
