--- a/index.html
+++ b/index.html
@@ -115,6 +115,20 @@
                             <img src="img/audio.png" width="1000px" style="border: 2px solid #000" />
                         </a>
                     </div>
+                    <a href="https://github.com/arf-themascoteers/glasses">
+                        <h3>
+                            Detect glasses using transfer learning
+                        </h3>
+                    </a>
+                    <p>
+                        Checks if the person in the image is wearing glasses. Used Resnet-18 as backbone.
+                    </p>
+                    <hr>
+                    <div>
+                        <a href="img/glasses.png">
+                            <img src="img/glasses.png" width="1000px" style="border: 2px solid #000" />
+                        </a>
+                    </div>
                     <a href="https://github.com/arf-themascoteers/ckd">
                         <h3>
                             Chronic Kidney Disease detection
