--- a/index.html
+++ b/index.html
@@ -115,6 +115,20 @@
                             <img src="img/audio.png" width="1000px" style="border: 2px solid #000" />
                         </a>
                     </div>
+                    <a href="https://github.com/arf-themascoteers/pt-mnist-sal">
+                        <h3>
+                            At attempt to understand the blackbox by exploring saliency map
+                        </h3>
+                    </a>
+                    <p>
+                        Saliency map highlights the pixels (in computer vision), which are responsible in making a decision. This projects generates saliency map on an MNIST digit classifier.
+                    </p>
+                    <hr>
+                    <div>
+                        <a href="img/sal.png">
+                            <img src="img/sal.png" width="1000px" style="border: 2px solid #000" />
+                        </a>
+                    </div>
                     <a href="https://github.com/arf-themascoteers/glasses">
                         <h3>
                             Detect glasses using transfer learning
