--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     </div>
                     <a href="https://github.com/arf-themascoteers/pt-mnist-sal">
                         <h3>
-                            At attempt to understand the blackbox by exploring saliency map
+                            Understanding the blackbox by exploring saliency map
                         </h3>
                     </a>
                     <p>
