--- a/index.html
+++ b/index.html
@@ -139,6 +139,20 @@
                     </p>
                     <hr>
                     <div>
+                        <a href="img/stock.png">
+                            <img src="img/stock.png" width="1000px" style="border: 2px solid #000" />
+                        </a>
+                    </div>
+                    <a href="https://github.com/arf-themascoteers/stock">
+                        <h3>
+                            Stock prediction using LSTM
+                        </h3>
+                    </a>
+                    <p>
+                        Predicting Amazon stock price using LSTM. <a href="https://medium.com/swlh/stock-price-prediction-with-pytorch-37f52ae84632">Credit</a>
+                    </p>
+                    <hr>
+                    <div>
                         <a href="img/glasses.png">
                             <img src="img/glasses.png" width="1000px" style="border: 2px solid #000" />
                         </a>
