--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         </h3>
                     </a>
                     <p>
-                        Predicting Amazon stock price using LSTM. <a href="https://medium.com/swlh/stock-price-prediction-with-pytorch-37f52ae84632">Credit</a>
+                        Predicting Amazon stock price using LSTM.
                     </p>
                     <hr>
                     <div>
