--- a/index.html
+++ b/index.html
@@ -143,6 +143,20 @@
                             <img src="img/glasses.png" width="1000px" style="border: 2px solid #000" />
                         </a>
                     </div>
+                    <a href="https://github.com/arf-themascoteers/moisture">
+                        <h3>
+                            Soil moisture prediction using multimodal data
+                        </h3>
+                    </a>
+                    <p>
+                        Predicting soil moisture from time-series data from different sensors including hyperspectral camera.
+                    </p>
+                    <hr>
+                    <div>
+                        <a href="img/soil.png">
+                            <img src="img/soil.png" width="1000px" style="border: 2px solid #000" />
+                        </a>
+                    </div>
                     <a href="https://github.com/arf-themascoteers/stock">
                         <h3>
                             Stock prediction using LSTM
