--- a/index.html
+++ b/index.html
@@ -524,6 +524,14 @@
                                 </span>
                             </a>
                         </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/arif-bitmascot/">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                                </span>
+                            </a>
+                        </li>
 
                         <li>
                             <a href="https://www.facebook.com/arif.noobest">
