--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         </h3>
                     </a>
                     <p>
-                        This is part of a commercial project that finds face in an image and intelligently crops so that they fit on ID cards as symmetrically as possible.
+                        This is part of a commercial project that finds a face in an image and crops as symmetrically as possible to fit on ID cards .
                     </p>
                     <hr>
                     <div>
