--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         PyTorch Projects
                     </h2>
                     <a href="https://github.com/arf-themascoteers/pines">
-                        <h3>
+                        <h3 id = 'pines'>
                             Hyperspectral image segmentation on the Indian Pines dataset
                         </h3>
                     </a>
