--- a/index.html
+++ b/index.html
@@ -221,6 +221,33 @@
                         </a>
                     </div>
                     <hr>
+                    <a href="https://github.com/arf-themascoteers/n20">
+                        <h3>
+                            Estimating nitrous oxide emissions
+                        </h3>
+                    </a>
+                    <p>
+                        Simple NN regression model to estimate N2O emissions
+                    </p>
+                    <div>
+                        <a href="img/n20.png">
+                            <img src="img/n20.png" width="1000px" style="border: 2px solid #000" />
+                        </a>
+                    </div>
+                    <hr>
+                    <a href="https://github.com/arf-themascoteers/vae-mnist">
+                        <h3>
+                            Variational Autoencoder
+                        </h3>
+                    </a>
+                    <p>
+                        Simple VAE on MNIST dataset. Used tensorboard to visualise continuous progress.
+                    </p>
+                    <div>
+                        <a href="img/vae2.png">
+                            <img src="img/vae2.png" width="1000px" style="border: 2px solid #000" />
+                        </a>
+                    </div>
                     <a href="https://github.com/arf-themascoteers/ae-mnist-cnn">
                         <h3>
                             Autoencoder
