--- a/index.html
+++ b/index.html
@@ -131,6 +131,20 @@
                             <img src="img/pines.png" width="1000px" style="border: 2px solid #000" />
                         </a>
                     </div>
+                    <a href="https://github.com/arf-themascoteers/age-gender">
+                        <h3 id = 'age-gender'>
+                            Multi-task learning
+                        </h3>
+                    </a>
+                    <p>
+                        From a multi-labelled dataset, predict age and gender.
+                    </p>
+                    <hr>
+                    <div>
+                        <a href="img/multi.png">
+                            <img src="img/multi.png" width="1000px" style="border: 2px solid #000" />
+                        </a>
+                    </div>
                     <a href="https://github.com/arf-themascoteers/ptem">
                         <h3>
                             Speech emotion recogniser
