--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         </h3>
                     </a>
                     <p>
-                        From a multi-labelled dataset, predict age and gender.
+                        From a multi-labelled face dataset, predict age and gender.
                     </p>
                     <hr>
                     <div>
