--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                         <li>A video processing system which takes a video of a graduation ceremony as input, and generates
                             short clips for each students based on the speeches in the video using
                             <b>Python and Laravel</b></li>
-                        <li>Contributed to hypercasual mobile games using Unity3D <a href="https://themascoteers.com/games">https://themascoteers.com/games</a> </li>
+                        <li>Contributed to hypercasual mobile games using <b>Unity3D</b> (<a href="https://themascoteers.com/games">themascoteers.com/games</a>) </li>
                     </ul>
                 </div>
                 <hr>
