--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                         </a>
                     </div>
                     <a href="https://github.com/arf-themascoteers/stock">
-                        <h3>
+                        <h3 id="stock">
                             Stock prediction using LSTM
                         </h3>
                     </a>
