--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
                         <h1>Arif's Portfolio</h1>
-                        <h2 class="contact">Mobile/WhatsApp: +61406155493</h2>
-                        <h2 class="contact">Facebook: <a href="https://www.facebook.com/arif.noobest">arif.noobest</a></h2>
-                        <h2 class="contact">LinkedIn: <a href="https://www.linkedin.com/in/arif-bitmascot">arif-bitmascot</a></h2>
-                        <h2 class="contact">Telegram: <a href="https://t.me/laddugpt">laddugpt</a></h2>
+                        <h2 class="contact">Mobile: +61406155493</h2>
+<!--                        <h2 class="contact">Mobile/WhatsApp: +61406155493</h2>-->
+<!--                        <h2 class="contact">Facebook: <a href="https://www.facebook.com/arif.noobest">arif.noobest</a></h2>-->
+<!--                        <h2 class="contact">LinkedIn: <a href="https://www.linkedin.com/in/arif-bitmascot">arif-bitmascot</a></h2>-->
+<!--                        <h2 class="contact">Telegram: <a href="https://t.me/laddugpt">laddugpt</a></h2>-->
                         <!--
                         <span class="subheading">Did you know GAN was invented in a bar?</span>
                         -->
